# file-converter

./: .gitignore  BUILD EXE.bat  README.md  pyproject.toml  requirements.txt  run_gui.py
src/csv_to_excel/: __init__.py  archive.py  converter.py  external.py  gui.py  office.py
tests/: test_archive_converter.py  test_converter.py  test_external_converter.py  test_office_converter.py
tools/: build_exe.py
